--- a/day1/day3/flex.css
+++ b/day1/day3/flex.css
@@ -29,7 +29,7 @@
     padding: 10px;
     
 }
-.item1{
+/* .item1{
     order: 2;
     flex-grow: 4;
 
@@ -37,4 +37,12 @@
 .item4{
     order: -1;
     flex-grow: 3;
+} */
+@media only screen and (max-width: 600px){
+    .fcontainer{
+        flex-direction: column;
+        text-align: center;
+
+
+    }
 }
